# BOXLESS_ESG

./: README.md
boxless_esg/: __init__.py  affordance.py  calibration.py  cli.py  clip_sem.py  pipeline.py  targets.py  text_parse.py  vis.py
boxless_esg_starter/: README.md  pyproject.toml  requirements.txt
boxless_esg_starter/data/: pairs.csv
boxless_esg_starter/runs/: batch_scores.csv
boxless_esg_starter/runs/batch/ex_0001/: evidence.json
boxless_esg_starter/runs/batch/ex_0002/: evidence.json
boxless_esg_starter/runs/batch/ex_0003/: evidence.json
boxless_esg_starter/runs/demo/: evidence.json
boxless_esg_starter/runs/prec1/: evidence.json
boxless_esg_starter/runs/tune1/: evidence.json
boxless_esg_starter/runs/tune2/: evidence.json
boxless_esg_starter/scripts/: batch_localize.py  fit_calibration.py  localize.py
boxless_esg_starter/src/boxless_esg/: clip_sem.py  gdino_gate.py  pipeline.py  precision_bbox.py  relations.py  utils.py
boxless_esg_starter/src/boxless_esg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
boxless_esg_starter/src/boxless_esg/proposals/: selective_search.py
boxless_esg_starter/tests/: test_utils.py
